@@ -13,6 +13,7 @@ class TimeTest:public CppUnit::TestFixture {
   CPPUNIT_TEST(testParseRFC850);
   CPPUNIT_TEST(testParseRFC850Ext);
   CPPUNIT_TEST(testParseHTTPDate);
+  CPPUNIT_TEST(testOperatorLess);
   CPPUNIT_TEST_SUITE_END();
 public:
   void setUp() {}
@@ -23,6 +24,7 @@ public:
   void testParseRFC850();
   void testParseRFC850Ext();
   void testParseHTTPDate();
+  void testOperatorLess();
 };
 
 
@@ -60,6 +62,24 @@ void TimeTest::testParseHTTPDate()
   CPPUNIT_ASSERT_EQUAL((time_t)-1,
 		       Time::parseHTTPDate
 		       ("Sat, 2008-09-06 15:26:33 GMT").getTime());
+}
+
+void TimeTest::testOperatorLess()
+{
+  CPPUNIT_ASSERT(Time(1) < Time(2));
+  CPPUNIT_ASSERT(!(Time(1) < Time(1)));
+  CPPUNIT_ASSERT(!(Time(2) < Time(1)));
+
+  struct timeval tv1;
+  tv1.tv_sec = 0;
+  tv1.tv_usec = 1;
+  struct timeval tv2;
+  tv2.tv_sec = 1;
+  tv2.tv_usec = 0;
+  CPPUNIT_ASSERT(Time(tv1) < Time(tv2));
+
+  tv2.tv_sec = 0;
+  CPPUNIT_ASSERT(Time(tv2) < Time(tv1));
 }
 
 } // namespace aria2
